# area-estimator

./: .gitignore  flake.nix  pyproject.toml
area_estimator/: area.py  config.py  console.py  containers.py  labels.py  line.py  spreadsheet.py  util.py
area_estimator/labelbox/: __init__.py  download_cache.py  label_extractor.py  project.py
area_estimator/templates/: index.html
